--- a/src/style.scss
+++ b/src/style.scss
@@ -39,6 +39,7 @@ button {
   color: #213547;
   border-radius: 8px;
   border: 1px solid #eaeaea;
+  margin: 0 10px;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
@@ -50,4 +51,9 @@ button {
 
 button:hover {
   border-color: #0070f3;
+}
+
+.selected-items ul{
+  list-style: none;
+  padding-left: 0;
 }
