--- a/src/style.scss
+++ b/src/style.scss
@@ -22,7 +22,7 @@ h1 {
 .vstack {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: .5rem;
 }
 
 .items-center {
@@ -53,7 +53,18 @@ button:hover {
   border-color: #0070f3;
 }
 
-.selected-items ul{
-  list-style: none;
-  padding-left: 0;
+.template-buttons > *{
+  text-align: center;
+  margin: 5px;
+}
+
+.selected-items{
+  h2{
+    margin: 10px 0 8px;
+  }
+  ul{
+    margin: 5px;
+    list-style: none;
+    padding-left: 0;
+  }
 }
