--- a/src/style.scss
+++ b/src/style.scss
@@ -123,7 +123,13 @@ button:hover {
 }
 
 .history{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   h2{
     margin: 10px 0 8px;
+  }
+  button{
+    margin: 0 auto;
   }
 }
