--- a/src/style.scss
+++ b/src/style.scss
@@ -4,7 +4,7 @@
 
 body {
   margin: 0;
-  padding: 1rem;
+  padding: 0 0.3rem 1rem;
   font-size: 16px;
   color: black;
   background-color: white;
@@ -32,7 +32,6 @@ ul{
 .vstack {
   display: flex;
   flex-direction: column;
-  gap: .5rem;
   gap: .5rem;
 }
 
@@ -83,9 +82,13 @@ button:hover {
   > * {
     margin: 5px;
   }
-  button.selected {
-    border: 2px solid #007bff;
-    background-color: #f8fafa;
+  button{
+    margin: 0 5px;
+    padding: 0.5rem 1rem;
+    &.selected{
+      border: 2px solid #007bff;
+      background-color: #f8fafa;
+    }
   }
 }
 
@@ -119,6 +122,10 @@ button:hover {
   button{
     padding-top: 0.4rem;
     padding-bottom: 0.4rem;
+  }
+  .selected-items-title{
+    display: flex;
+    align-items: center;
   }
 }
 
